--- a/portfolio/labs/lab02/index.html
+++ b/portfolio/labs/lab02/index.html
@@ -12,9 +12,15 @@
 </head>
 
 <body>
-  <div>
-  	<p>作業二</p>
-  </div>
+<h1>作業二</h1>
+<div>
+輸入漢字:<input value="葉相佑" id="in1">
+</div>
+  <div id="info3"></div>
+  <div id="info1"></div>
+  <!--
+  <div id="info2"></div>
+  -->
 </body>
 
 </html>
