--- a/portfolio/labs/lab07/index.html
+++ b/portfolio/labs/lab07/index.html
@@ -10,6 +10,8 @@
   <title> lab07 - parser </title>
   <link rel="stylesheet" href="./lab.css">
   
+  <script src="./jquery-3.4.1.min.js"</script>
+  <script src="./snap.svg-min.js"</script>
   <script src="./svg.min.js"></script>
   <script src="./svg.draggable.min.js"></script>
   <script src="./lab.js"></script>
@@ -51,6 +53,9 @@
       <a href="http://petercollingridge.appspot.com/svg-optimiser">SVG optimiser</a>, 
       <a href="http://petercollingridge.appspot.com/svg-transforms">SVG transformations</a>
   </div>
+
+  <div id="s5" class="noborder"></div>
+  <div>我盡力了 助教謝謝你們 ! </div>
 
 </body>
 
